--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
   "bugs": {
     "url": "https://github.com/vinze-ps/vinzeGallery/issues"
   },
-  "homepage": "https://github.com/vinze-ps/vinzeGallery#readme"
+  "homepage": "https://github.com/vinze-ps/vinzeGallery#readme",
+  "dependencies": {}
 }
