--- a/package.json
+++ b/package.json
@@ -4,5 +4,23 @@
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "vinzeutilities": "github:vinze-ps/vinzeUtilities"
-  }
+  },
+  "name": "vinzegallery",
+  "description": "Easy and simple-use Javascript photos gallery slider.",
+  "version": "1.0.1",
+  "main": "src/js/vinzeGallery.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vinze-ps/vinzeGallery.git"
+  },
+  "author": "vinze-ps",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/vinze-ps/vinzeGallery/issues"
+  },
+  "homepage": "https://github.com/vinze-ps/vinzeGallery#readme"
 }
